编辑以及一些其他逻辑

--- a/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.scss
+++ b/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.scss
@@ -2,6 +2,14 @@
   flex-grow: 1;
 }
 
+input[type=date]::-webkit-inner-spin-button {
+  visibility: hidden;
+}
+
+input[type=date]::-webkit-inner-spin-button {
+  visibility: hidden;
+}
+
 main {
   .expense-book {
     display: flex;
