--- a/src/app/components/account/components/expense/expense-list/expense-detail/expense-detail.component.html
+++ b/src/app/components/account/components/expense/expense-list/expense-detail/expense-detail.component.html
@@ -8,7 +8,7 @@
     </span>
   </div>
   <ul class="expense-detail-list">
-    <li *ngFor="let group of groupList">
+    <li *ngFor="let group of expenseService?.groupExpenseDetailList">
       <div class="expense-category">
         {{group.name}}
       </div>
