--- a/src/app/components/account/components/expense/expense-list/expense-list.component.scss
+++ b/src/app/components/account/components/expense/expense-list/expense-list.component.scss
@@ -17,6 +17,12 @@ main {
   align-items: center;
   justify-content: space-between;
   padding: 0px 7px;
+
+  span {
+    &:first-of-type {
+      cursor: pointer;
+    }
+  }
 }
 
 ul {
