修复编辑BUG&&开始收入

--- a/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.scss
+++ b/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.scss
@@ -2,12 +2,10 @@
   flex-grow: 1;
 }
 
-input[type=date]::-webkit-inner-spin-button {
-  visibility: hidden;
-}
-
-input[type=date]::-webkit-inner-spin-button {
-  visibility: hidden;
+ul,
+li {
+  margin: 0;
+  padding: 0;
 }
 
 main {
