--- a/src/app/components/account/components/income/income.component.html
+++ b/src/app/components/account/components/income/income.component.html
@@ -1,3 +1,6 @@
-<p>
-  income works!
-</p>
+<main>
+  <income-add-edit></income-add-edit>
+  <div class="dynamic-component">
+    <ng-template dynamic-component></ng-template>
+  </div>
+</main>
