公共组件参与人

--- a/src/app/components/account/components/income/income-add-edit/income-add-edit.component.html
+++ b/src/app/components/account/components/income/income-add-edit/income-add-edit.component.html
@@ -39,14 +39,10 @@
       </div>
     </div>
 
-    <div class="row-3 participant">
-      <label>
-        参与人:
-      </label>
-      <div>
-      </div>
+    <div class="row-6 participant">
+      <participant-select></participant-select>
     </div>
-    <div class="row-3 label">
+    <div class="row-6 label">
       <label>
         标签:
       </label>
