完成参与&&开始标签

--- a/src/app/components/account/components/income/income-add-edit/income-add-edit.component.html
+++ b/src/app/components/account/components/income/income-add-edit/income-add-edit.component.html
@@ -40,15 +40,10 @@
     </div>
 
     <div class="row-6 participant">
-      <participant-select></participant-select>
+      <participant-select [title]="'参与'" (setParticipantList)="onSetParticipantList($event)"></participant-select>
     </div>
     <div class="row-6 label">
-      <label>
-        标签:
-      </label>
-      <div>
-
-      </div>
+      <label-select [title]="'标签'"></label-select>
     </div>
 
     <div class="row-6 memo">
