--- a/src/app/core/components/participant/participant-select/participant-select.component.html
+++ b/src/app/core/components/participant/participant-select/participant-select.component.html
@@ -1,19 +1,17 @@
 <main>
-  <label>参与:</label>
+  <label *ngIf="title">{{title}}:</label>
   <div class="content">
     <ul class="selected-participant">
-      <li>李志锋 <i></i></li>
+      <li *ngFor="let item of selectedParticipantList">{{item?.name}} <i (click)="delete(item)"></i></li>
+      <li class="select" id="participant-select" blankClick>
+        选择参与人
+        <div class="ul-select" *ngIf="isListShow">
+          <ul *ngIf="participantList && participantList?.length">
+            <li *ngFor="let item of participantList" (click)="select(item)">{{item?.name}}</li>
+          </ul>
+          <div class="add" (click)="add()">添加参与人</div>
+        </div>
+      </li>
     </ul>
-    <div class="select" id="participant-select" blankClick>
-      <button>选择参与人</button>
-      <div class="ul-select" *ngIf="isListShow">
-        <ul>
-          <!-- <li (click)="select(item)" *ngFor="let item of addressList">
-                  {{item?.province}}|{{item?.city}}|{{item?.area}}
-                </li> -->
-        </ul>
-        <div class="add" (click)="add()">添加参与人</div>
-      </div>
-    </div>
   </div>
 </main>
