--- a/src/app/core/components/participant/participant-select/participant-select.component.scss
+++ b/src/app/core/components/participant/participant-select/participant-select.component.scss
@@ -25,10 +25,8 @@ ul {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  max-height: 60px;
-  overflow-y: auto;
-  justify-content: space-between;
   padding: 8px 0;
+
   li {
     margin: 2px 4px;
     border: 1px dashed #dedede;
@@ -65,33 +63,35 @@ ul {
       cursor: pointer;
     }
   }
-}
 
-
-.select {
-  position: relative;
-  border: none;
-
-  i {
-    position: absolute;
-    top: 6px;
-    right: 2px;
-  }
-
-  button {
-    height: 32px;
-    line-height: 32px;
+  .select {
+    position: relative;
     border: 1px dashed;
-    background: #fff;
-    width: 120px;
+
+    i {
+      position: absolute;
+      top: 6px;
+      right: 2px;
+    }
+
+    button {
+      height: 32px;
+      line-height: 32px;
+      border: 1px dashed;
+      background: #fff;
+      width: 120px;
+    }
   }
 }
+
 
 .ul-select {
   display: flex;
   position: absolute;
   width: 120px;
   flex-direction: column;
+  top: 32px;
+  left: 0px;
 
   .add {
     cursor: pointer;
@@ -124,6 +124,7 @@ ul {
       line-height: 32px;
       cursor: pointer;
       padding: 0 10px;
+      border: none;
 
       &:hover {
         background: #f5f5f5;
