--- a/src/app/components/account/components/income/income-list/income-list.component.html
+++ b/src/app/components/account/components/income/income-list/income-list.component.html
@@ -1,3 +1,29 @@
-<p>
-  income-list works!
-</p>
+<main>
+  <div class="month-income">
+    <span>本月收入</span>
+    <span>
+      总计: 6300元
+    </span>
+  </div>
+  <ul class="income-list">
+    <li>
+      <div class="income-category">
+        工资
+      </div>
+      <div class="income-detail">
+        <ul>
+          <li>
+            <div>
+              <span>湖南畅旅</span>
+              <span>长沙</span>
+            </div>
+            <div>
+              <span>+4800元</span>
+              <span>一个月</span>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </li>
+  </ul>
+</main>
