--- a/src/app/components/account/components/expense/expense-list/expense-detail/expense-detail.component.scss
+++ b/src/app/components/account/components/expense/expense-list/expense-detail/expense-detail.component.scss
@@ -5,6 +5,12 @@ main {
   background: #fff;
 }
 
+ul{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 main>ul {
   flex-grow: 1;
   border: 1px solid #dedede;
@@ -64,19 +70,19 @@ main>ul {
   flex-grow: 1;
 }
 
-.expense-detail-item {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid #dedede;
-  border-top: none;
-  padding: 2px 10px;
-  border-right: none;
-  cursor: pointer;
-}
+// .expense-detail-item {
+//   display: flex;
+//   flex-direction: column;
+//   border: 1px solid #dedede;
+//   border-top: none;
+//   padding: 2px 10px;
+//   border-right: none;
+//   cursor: pointer;
+// }
 
-.expense-detail-item:hover {
-  background: #dedede;
-}
+// .expense-detail-item:hover {
+//   background: #dedede;
+// }
 
 .expense-detail li {
   cursor: pointer;
