--- a/src/app/core/components/fund-party/fund-party-select/fund-party-select.component.scss
+++ b/src/app/core/components/fund-party/fund-party-select/fund-party-select.component.scss
@@ -17,7 +17,7 @@ main {
   position: absolute;
   width: 100%;
   flex-direction: column;
-
+  z-index: 1000;
   .add {
     cursor: pointer;
     box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
