--- a/src/app/components/account/components/expense/expense-list/expense-list.component.scss
+++ b/src/app/components/account/components/expense/expense-list/expense-list.component.scss
@@ -30,6 +30,8 @@ ul {
   border: 1px solid #dedede;
   border-radius: 0px 0 3px 3px;
   border-top: none;
+  margin: 0;
+  padding: 0;
 }
 
 .no-expense {
