--- a/src/app/core/components/participant/participant-select/participant-select.component.scss
+++ b/src/app/core/components/participant/participant-select/participant-select.component.scss
@@ -92,7 +92,7 @@ ul {
   flex-direction: column;
   top: 32px;
   left: 0px;
-
+  z-index:1000;
   .add {
     cursor: pointer;
     box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
