--- a/src/app/components/account/components/income/income-add-edit/income-add-edit.component.scss
+++ b/src/app/components/account/components/income/income-add-edit/income-add-edit.component.scss
@@ -9,6 +9,14 @@ li {
   padding: 0;
 }
 
+input[type="date"] {
+  height: 23px;
+  margin-top: 5px;
+  border: none;
+  border-bottom: 1px dashed;
+  outline: none;
+}
+
 
 form {
   display: grid;
