--- a/src/app/core/components/addreess/address-select/address-select.component.html
+++ b/src/app/core/components/addreess/address-select/address-select.component.html
@@ -2,7 +2,8 @@
   <label>
     {{title}}:
   </label>
-  <div class="select" id="address-select" blankClick>
+  <!-- id="address-select"  blankClick-->
+  <div class="select"  >
     <input type="text" name="address" [(ngModel)]="address" disabled placeholder="请选择地点">
     <i class="down-triangle"></i>
   </div>
