--- a/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.scss
+++ b/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.scss
@@ -8,6 +8,14 @@ li {
   padding: 0;
 }
 
+input[type="date"] {
+  height: 23px;
+  margin-top: 5px;
+  border: none;
+  border-bottom: 1px dashed;
+  outline: none;
+}
+
 main {
   .expense-book {
     display: flex;
