--- a/src/app/core/components/fundAccount/fund-account-add-edit/fund-account-add-edit.component.scss
+++ b/src/app/core/components/fundAccount/fund-account-add-edit/fund-account-add-edit.component.scss
@@ -1,12 +1,73 @@
 main {
-  div {
+  .input {
     display: flex;
     flex-direction: column;
     margin: 10px 0;
   }
 
+  ul {
+    max-height: 125px;
+    overflow-y: auto;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    z-index: 1000;
+    position: absolute;
+    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
+    background: #fff;
+
+    li {
+      height: 32px;
+      line-height: 32px;
+      cursor: pointer;
+      padding: 0 10px;
+      display: flex;
+      align-items: center;
+
+      span {
+        margin-left: 5px;
+      }
+
+      &:hover {
+        background: #f5f5f5;
+      }
+    }
+  }
+
+  .select {
+    position: relative;
+
+    i {
+      position: absolute;
+      top: 6px;
+      right: 2px;
+    }
+
+    input {
+      width: 98%;
+      margin-top: 5px;
+      border: none;
+      border-bottom: 1px dashed #000;
+      height: 20px;
+      cursor: pointer;
+    }
+
+  }
+
   .btn-group {
     display: flex;
     flex-direction: row;
+  }
+
+
+  input:disabled {
+    background-color: #fff;
+  }
+
+
+  input::-webkit-input-placeholder {
+    color: #A2ABAB;
+    font-size: 16px;
   }
 }
